--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,5 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker build . -t clover-cloud
+    - name: Login to Github Packages
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GHCR_PAT }}
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v2
+      with:
+        tags: CopterExpress/clover-cloud:latest
+        push: true
