Print image digest

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,3 +22,5 @@ jobs:
       with:
         tags: CopterExpress/clover-cloud:latest
         push: true
+    - name: Image digest
+      run: echo ${{ steps.docker_build.outputs.digest }}
